Back to C pointers for tile providers config. Add map widget on top of map2d.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,11 @@ set(SOURCE
     src/widgets/strip.cpp
     src/widgets/ac_selector.ui
     src/widgets/ac_selector.cpp
+    src/widgets/pprzmap.cpp
     src/widgets/map/tileprovider.cpp
     src/widgets/map/tileproviderconfig.cpp
     src/widgets/map/tileitem.cpp
-    src/widgets/map2d.cpp
+    src/widgets/map/map2d.cpp
     src/layout_builder.cpp
     src/pprz_dispatcher.cpp
     src/pprzmain.ui
