Began interactions, and connection with PPRZLink.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 2.8)
 
 project(PprzGCS)
 
+set(LIB_PPRZLINK "/home/fabien/local/lib")
+set(INCLUDE_PPRZLINK "/home/fabien/local/include/pprzlink")
+
+set(CMAKE_PREFIX_PATH  "${CMAKE_PREFIX_PATH};/home/fabien/local/lib")
+
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra")
 
 set(CMAKE_AUTOMOC ON)
@@ -13,13 +19,11 @@ if(CMAKE_VERSION VERSION_LESS "3.7.0")
 endif()
 
 find_package(Qt5 COMPONENTS Widgets Xml Network REQUIRED)
+find_package(tinyxml2 REQUIRED )
+find_package(Boost COMPONENTS system)
 
-# LibProj dependency for calculating coordinate projections
-#find_package(PROJ4 REQUIRED proj>=4.0)
-#if (PROJ4_FOUND)
-#    include_directories(${PROJ4_INCLUDE_DIRS})
-#    link_directories(${PROJ4_LIBRARY_DIRS})
-#endif (PROJ4_FOUND)
+find_library(PPRZLINK_LIB NAMES pprzlink++ PATH ${LIB_PPRZLINK})
+find_library(IVY_LIB NAMES ivy)
 
 
 set(SOURCE
@@ -39,6 +43,7 @@ set(SOURCE
     src/widgets/map/mapwidget.cpp
     src/widgets/map/maplayercontrol.cpp
     src/widgets/map/layertab.cpp
+    src/widgets/map/mapscene.cpp
     src/widgets/basics/imagebutton.cpp
     src/layout_builder.cpp
     src/pprz_dispatcher.cpp
@@ -56,24 +61,19 @@ include_directories(
     src/geometry/
     src/widgets/map/
     src/widgets/basics/
+    ${INCLUDE_PPRZLINK}
 )
-
-#set(HEADERS
-#    ${HEADERS}
-#    src/widgets/strip.h
-#    src/layout_builder.h
-#    src/pprz_dispatcher.h
-#    src/pprzmain.h
-#    src/dispatcher_ui.h
-#    src/gcs.h
-#    src/uisignals.h
-#    src/widgets/ac_selector.h
-#    src/widgets/map2d.h
-#    src/widgets/strip.h
-#    )
-
 
 add_executable(${PROJECT_NAME} ${SOURCE})
 
-target_link_libraries(PprzGCS Qt5::Widgets Qt5::Xml Qt5::Network ${PROJ4_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}
+    Qt5::Widgets
+    Qt5::Xml
+    Qt5::Network
+    ${Boost_LIBRARIES}
+    ${PPRZLINK_LIB}
+    ${IVY_LIB}
+    tinyxml2
+    Boost::system
+)
 
