Makes Path state machine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ set(SOURCE
     src/widgets/map/fpedit_statemachines/fpeditstatemachine.cpp
     src/widgets/map/fpedit_statemachines/smwaypointitem.cpp
     src/widgets/map/fpedit_statemachines/smcircleitem.cpp
+    src/widgets/map/fpedit_statemachines/smpathitem.cpp
     src/widgets/map/path.cpp
     src/widgets/map/graphicsline.cpp
     src/widgets/map/graphicscircle.cpp
