--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,11 +50,14 @@ set(SOURCE
     src/widgets/map/map_items/path_item.cpp
     src/widgets/map/map_items/circle_item.cpp
     src/widgets/map/map_items/aircraft_item.cpp
+
     src/widgets/map/graphics_objects/graphics_object.cpp
     src/widgets/map/graphics_objects/graphics_point.cpp
     src/widgets/map/graphics_objects/graphics_line.cpp
     src/widgets/map/graphics_objects/graphics_circle.cpp
     src/widgets/map/graphics_objects/graphics_aircraft.cpp
+    src/widgets/map/graphics_objects/graphics_track.cpp
+
     src/widgets/map/fpedit_statemachines/item_edit_state_machine.cpp
     src/widgets/map/fpedit_statemachines/waypointitem_sm.cpp
     src/widgets/map/fpedit_statemachines/circleitem_sm.cpp
