Handle aircraft icons.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ set(SOURCE
     src/common/flightplan.cpp
     src/common/setting_menu.cpp
     src/common/setting.cpp
+    src/common/airframe.cpp
 )
 
 include_directories(
