--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ project(PprzGCS)
 
 set(Qt5_DIR "$HOME/Qt/5.12.5/gcc_64/lib/cmake/Qt5")
 
-#set(CMAKE_PREFIX_PATH  "${CMAKE_PREFIX_PATH};/home/fabien/local/lib")
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -fno-sized-deallocation")
 
@@ -17,9 +15,10 @@ if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
 
-
 find_package(Qt5 COMPONENTS Widgets Xml Network Svg REQUIRED)
-find_package(PROJ REQUIRED)
+
+set(PROJ4_DIR "ext/PROJ/build/local_install/lib/cmake/proj4")
+find_package(PROJ4 REQUIRED)
 
 set(PPRZLINK_PATH ext/pprzlink/lib/v2.0/C++)
 add_subdirectory(${PPRZLINK_PATH} pprzlink)
