--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,32 +6,29 @@ name: CI
 on:
   # Triggers the workflow on push but only for the test_build branch
   push:
-    branches: [ master ]
+    tags:
+      - '**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+jobs:
+  build:
+    runs-on: ubuntu-20.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checks-out repository under $GITHUB_WORKSPACE
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
           submodules: recursive
 
-      # Runs a single command using the runners shell
+      # Add Paparazzi PPA for ivy-c-dev
       - name: Add pprz PPA
         run: sudo add-apt-repository -y ppa:paparazzi-uav/ppa
 
-    # Runs a single command using the runners shell
-      - name: install deps
+    # Install dependencies
+      - name: Install dependencies
         run: sudo apt install ivy-c-dev libboost-system-dev libsqlite3-dev libzip-dev qtbase5-dev libqt5svg5-dev libproj-dev mesa-common-dev libglu1-mesa-dev patchelf
       
       - name: setup env
@@ -52,8 +49,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: release_${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
           body_path: ${{ github.workspace }}/misc/release_body.md
           draft: false
           prerelease: false
