Adds DEV_20_04 build target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ if(BUILD_TARGET STREQUAL "DEV_18_04")
 elseif(BUILD_TARGET STREQUAL "BUILD_DEB_20_04")
     set(APP_DATA_PATH /usr/share/pprzgcs)
     set(PROJ4_LIBRARIES proj)
+elseif(BUILD_TARGET STREQUAL "DEV_20_04")
+    get_filename_component(APP_DATA_PATH "./data/" ABSOLUTE)
+    set(PROJ4_LIBRARIES proj)
 elseif(BUILD_TARGET STREQUAL "BUILD_DEB_18_04")
     set(APP_DATA_PATH /usr/share/pprzgcs)
 elseif(BUILD_TARGET STREQUAL "BUILD_MAC")
