--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -2,11 +2,16 @@ name: Doc
 
 on:
   push:
-    branches: [ master ]
+    branches:
+    - 'master'
+    paths: 
+    - 'docs/**'
   pull_request:
-    branches: [ master ]
+    branches:
+    - 'master'
+    paths: 
+    - 'docs/**'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
